Added a hero section with a cute cat image and a small bio.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to Our Website</h1>
@@ -14,6 +15,11 @@
         <li><a href="#">Contact</a></li>
     </ul>
     </nav>
+    <div id="hero-section">
+        <h2>Our Hero of the Week, Meowriana Grande</h2>
+        <img src="cute_cat.jpg">
+        <p>Say hello to our hero of the day, <i>Meowriana Grande</i>. Her melodic meows have touched the heart of hundreds guests who pass by everyday to see this fuzzball adorned in her favorite blue bow. </p>
+    </div>
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
