Added a contact form

--- a/index.html
+++ b/index.html
@@ -14,11 +14,31 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
+    <br>
     </nav>
     <div id="hero-section">
         <h2>Our Hero of the Week, Meowriana Grande</h2>
         <img src="cute_cat.jpg">
         <p>Say hello to our hero of the day, <i>Meowriana Grande</i>. Her melodic meows have touched the heart of hundreds guests who pass by everyday to see this fuzzball adorned in her favorite blue bow. </p>
+    </div>
+    <br>
+    <div id="contact-form">
+        <h3>Would you like to see Meowriana?</h3>
+        <form>
+            <label for="first-name">Name</label>
+            <br>
+            <input type="text" id="first-name">
+            <br>
+            <br>
+            <label for="email">Email</label>
+            <br>
+            <input type="text" id="email">
+            <br>
+            <br>
+            <label for="message">Message</label>
+            <br>
+            <textarea id="message" rows="4" cols="50"></textarea>
+        </form>
     </div>
     <footer>
         <p>&copy; 2025 My Website</p>
