Added a customer testimonial section with anonymous cat pictures as a placeholer for customer icons.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
             <textarea id="message" rows="4" cols="50"></textarea>
         </form>
     </div>
+    <br>
+    <div id="testimonial-section">
+        <h3>Customer Testimonials</h3>
+        <br>
+        <div class="testimonials">
+            <h4>Sandy Cheeks</h4>
+            <img src="anon-cat.jpg">
+            <p>"My life has been changed forever since meeting Meowriana. 10/10."</p>
+        </div>
+        <div class="testimonials">
+            <h4>Eugene Krabs</h4>
+            <img src="anon-cat.jpg">
+            <p>"Usually, I'm not a cat person, but I let this cat take my last penny."</p>
+        </div>
+    </div>
+    <br>
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
